[fix] Fixed font flickering while page is loading

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto+Condensed:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto+Condensed:wght@400;700");
 @import url("./variables.css");
 
 * {
@@ -9,7 +9,7 @@
 
 body {
   background-color: var(--bg-primary);
-  font-family: "Roboto Condensed", sans-serif;
+  font-family: "Roboto Condensed";
   color: var(--font-primary);
 }
 
